--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/my-widget.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Ninestars - v4.3.0
@@ -73,6 +74,7 @@
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a id='scheduleNow' class="getstarted">Schedule Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -658,7 +660,6 @@
         </div>
       </div>
     </div>
-
     <div class="container py-4">
       <div class="copyright">
         &copy; Copyright <strong><span>Ninestars</span></strong>. All Rights Reserved
@@ -671,8 +672,15 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
 
+  </footer><!-- End Footer -->
+  <div class="modal-my">
+    <div class="modal-box-my">
+      <span class="close-button-my">X</span>
+      <iframe src="http://localhost:8080"></iframe>
+
+    </div>
+  </div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
@@ -685,6 +693,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/init-widget.js"></script>
 
 </body>
 
