--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="row gy-4">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>betsss digital experience with Ninestars</h1>
+          <h1>best digital experience with Ninestars</h1>
           <h2>We are team of talented designers making websites with Bootstrap</h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
@@ -674,13 +674,7 @@
     </div>
 
   </footer><!-- End Footer -->
-  <div class="modal-my">
-    <div class="modal-box-my">
-      <span class="close-button-my">X</span>
-      <iframe src="http://localhost:8080"></iframe>
-
-    </div>
-  </div>
+  
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
