--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/init-widget.js"></script>
+  <script src="https://static.servicetitan.com/webscheduler/init.js"></script>
 
 </body>
 
