small changes with template and init script

--- a/index.html
+++ b/index.html
@@ -699,8 +699,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="https://static.servicetitan.com/webscheduler/init.js"></script>
-
+  <script id='st-w-scheduler' src="./assets/js/init.js?token=12345asdfg"></script>
+<!--  <script id='st-w-scheduler' data-token="12345asdfg" src="https://static.servicetitan.com/webscheduler/init.js"></script>-->
 </body>
 
 </html>
