set valid key for iframe loader

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script id='st-w-scheduler' src="./assets/js/init.js?token=12345asdfg"></script>
+  <script id='st-w-scheduler' src="./assets/js/init.js?token=6B5249C3-6460-4AE9-83A8-487A729B54A4"></script>
 <!--  <script id='st-w-scheduler' data-token="12345asdfg" src="https://static.servicetitan.com/webscheduler/init.js"></script>-->
 </body>
 
